[package]
name = "bgpd"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"
license = "MIT"
description = "BGP peering utility"
homepage = "https://github.com/thepacketgeek/bgpd-rs"
documentation = "https://docs.rs/crate/bgpd-rs"
repository = "https://github.com/thepacketgeek/bgpd-rs"
keywords = ["bgp", "network"]
categories = ["network-programming"]

[[bin]]
name = "bgpd"
path = "src/main.rs"

[dependencies]
bgp-rs = { git = "https://github.com/DevQps/bgp-rs", features = ["flowspec"] }
bgpd-rpc-lib = { path = "rpc_lib" }
bytes = "^0.5.3"
byteorder = "1.3.1"
chrono = { version = "0.4.7", features = ["serde"] }
env_logger = "0.6.1"
ipnetwork = "^0.16"
itertools = "^0.8.1"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", default-features = false, features = ["http"] }
futures = { version = "^0.3" }
log = "0.4.6"
net2 = "0.2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.11"
structopt = "0.2.18"
tokio = {version = "^0.2.11", features=["macros", "tcp", "time", "stream"]}
tokio-util = { version = "^0.2", features=["codec"]}
toml = "0.5"
twoway = "0.2.0"
