[package]
name = "bgpd-rs"
version = "0.2.3"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"
license = "MIT"
description = "BGP peering utility"
homepage = "https://github.com/thepacketgeek/bgpd-rs"
documentation = "https://docs.rs/crate/bgpd-rs"
repository = "https://github.com/thepacketgeek/bgpd-rs"
keywords = ["bgp", "network"]
categories = ["network-programming"]

[[bin]]
name = "bgpd"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["colored", "prettytable-rs"]

[dependencies]
async-trait = "0.1"
bgp-rs = { version = "0.6", features = ["flowspec"] }
bytes = "1.1"
byteorder = "1.3.1"
chrono = { version = "0.4.7", features = ["serde"] }
clap = { version = "3", features =["derive"]}
colored = { version = "1.8", optional = true }
env_logger = "0.6.1"
ipnetwork = "^0.16"
itertools = "^0.8.1"
jsonrpsee = { version = "0.5.1", features = [ "client", "server", "macros" ] }
futures = { version = "^0.3" }
log = "0.4.6"
net2 = "0.2.33"
prettytable-rs = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.11"
tokio = {version = "1.12", features=["macros", "time"]}
tokio-util = { version = "^0.6", features=["codec", "time"]}
toml = "0.5"
twoway = "0.2.0"
