[package]
name = "bgpd-rs"
version = "0.2.3"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"
license = "MIT"
description = "BGP peering utility"
homepage = "https://github.com/thepacketgeek/bgpd-rs"
documentation = "https://docs.rs/crate/bgpd-rs"
repository = "https://github.com/thepacketgeek/bgpd-rs"
keywords = ["bgp", "network"]
categories = ["network-programming"]

[[bin]]
name = "bgpd"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["colored", "prettytable-rs"]

[dependencies]
async-trait = "0.1.53"
bgp-rs = { version = "0.6.0", features = ["flowspec"] }
bytes = "1.1.0"
byteorder = "1.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
colored = { version = "2.0.0", optional = true }
env_logger = "0.9.0"
ipnetwork = "0.19.0"
itertools = "0.10.3"
jsonrpsee = { version = "0.14", features = [ "client", "server", "macros" ] }
futures = "0.3.21"
log = "0.4.17"
net2 = "0.2.37"
prettytable-rs = { version = "0.8.0", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
signal-hook = "0.3.13"
tokio = { version = "1.18.2", features = ["macros", "time"] }
tokio-util = { version = "0.7.1", features = ["codec", "time"] }
toml = "0.5.9"
twoway = "0.2.2"
