[package]
name = "bgpd"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[[bin]]
name = "bgpd"
path = "src/main.rs"


[dependencies]
bgp-rs = { git = "https://github.com/thepacketgeek/bgp-rs", branch = "message-attrs" }
bgpd-lib = { path = "../lib" }
chrono = "0.4.7"
ctrlc = "3.1.3"
env_logger = "0.6.1"
futures = "0.1"
hyper = "0.12.33"
log = "0.4.6"
net2 = "0.2.33"
rusqlite = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2.18"
tokio = "0.1.21"
tokio-io = "0.1"
toml = "0.5"