[package]
name = "bgpd-lib"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[lib]
name = "bgpd_lib"
path = "src/lib.rs"

[dependencies]
bgp-rs = { git = "https://github.com/thepacketgeek/bgp-rs", branch = "message-attrs" }
byteorder = "1.3.1"
bytes = "0.4"
chrono = { version = "0.4.7", features = ["serde"] }
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1.21"
tokio-codec = "0.1.1"
twoway = "0.2.0"