[package]
name = "bgpd-lib"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[lib]
name = "bgpd_lib"
path = "src/lib.rs"

[dependencies]
bgp-rs = { git = "https://github.com/thepacketgeek/bgp-rs", branch = "message-attrs" }
chrono = { version = "0.4.7", features = ["serde"] }
