[package]
name = "bgpd-rpc-lib"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[lib]
name = "bgpd_rpc_lib"
path = "src/lib.rs"

[dependencies]
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", default-features = false, features = ["http"] }
ipnetwork = "^0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "^1.0.11"