[package]
name = "bgpd-rpc-lib"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[lib]
name = "bgpd_rpc_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
jsonrpsee = { version = "0.3.1", features = [ "macros", "server" ] }
ipnetwork = "^0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "^1.0.11"
