[package]
name = "bgpd-cli"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
edition = "2018"

[[bin]]
name = "bgpd-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.12", features = [ "macros" ] }
bgpd-rpc-lib = { path = "../../rpc_lib" }
colored = "1.8.0"
itertools = "0.8.0"
ipnetwork = "^0.16"
jsonrpsee = { version = "0.3.1", features = [ "client" ] }
serde_json = "1.0"
structopt = "0.2.18"
prettytable-rs = "0.8.0"
